--- a/public/aguarde-en.html
+++ b/public/aguarde-en.html
@@ -957,7 +957,13 @@
 </style>
 
 
-
+<script type="text/javascript">
+  (function(c,l,a,r,i,t,y){
+    c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+    t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+    y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+  })(window, document, "clarity", "script", "tg0bonz3au");
+</script>
 
   <!-- Meta Pixel Code -->
   <script>
@@ -2129,6 +2135,43 @@
         `;
 
         document.getElementById('email').value = data.email || '';
+        try {
+  const valor = Number(data.contribuicao || data.valor || data.price || 0);
+
+  if (valor > 0) {
+
+    // Pixel Meta – Purchase com valor dinâmico
+    fbq('track', 'Purchase', {
+      value: valor,
+      currency: 'BRL'
+    });
+
+    // GA4 – purchase com valor real
+    gtag('event', 'purchase', {
+      transaction_id: sessionId,
+      value: valor,
+      currency: 'BRL',
+      items: [{
+        item_id: 'diagnostico-mapa',
+        item_name: 'Diagnóstico Mapa da Alma',
+        quantity: 1
+      }]
+    });
+
+    // Google Ads – Conversion (opcional)
+    gtag('event', 'conversion', {
+      send_to: 'AW-936695843/wYdYCJmK-pYbEKOw074D',
+      value: valor,
+      currency: 'BRL',
+      transaction_id: sessionId
+    });
+
+  } else {
+    console.warn("⚠️ Valor da contribuição não encontrado no /info.");
+  }
+} catch (e) {
+  console.error("Erro ao enviar valor para Meta/Google:", e);
+}
       } catch (err) {
         console.error('Error loading user data:', err);
       }
