--- a/public/en/pay.html
+++ b/public/en/pay.html
@@ -101,7 +101,7 @@ src="https://www.facebook.com/tr?id=734281049586138&ev=PageView&noscript=1"/></n
       </p>
 
       <div style="display:flex;gap:8px;flex-wrap:wrap;justify-content:center;margin-bottom:10px">
-        <button class="chip" data-v="10" title="🌱 Seed" style="padding:8px 12px;border-radius:999px;border:1px solid #d1d5db;background:#fff;cursor:pointer">$10</button>
+        <button class="chip" data-v="9" title="🌱 Seed" style="padding:8px 12px;border-radius:999px;border:1px solid #d1d5db;background:#fff;cursor:pointer">$9</button>
         <button class="chip" data-v="19" title="🔺 Committed" style="padding:8px 12px;border-radius:999px;border:1px solid #d1d5db;background:#fff;cursor:pointer">$19</button>
         <button class="chip" data-v="29" title="🔥 Transforming" style="padding:8px 12px;border-radius:999px;border:1px solid #d1d5db;background:#fff;cursor:pointer">$29</button>
         <button class="chip" data-v="49" title="🌕 Complete" style="padding:8px 12px;border-radius:999px;border:1px solid #d1d5db;background:#fff;cursor:pointer">$49</button>
@@ -119,7 +119,7 @@ src="https://www.facebook.com/tr?id=734281049586138&ev=PageView&noscript=1"/></n
 
       <div style="display:flex;gap:8px;justify-content:center;align-items:center;margin-bottom:8px">
         <label for="valorSolidario" style="color:#f5f5f5;font:600 14px system-ui">Amount:</label>
-        <input id="valorSolidario" type="number" min="1" max="500" step="1" value="1" inputmode="numeric"
+        <input id="valorSolidario" type="number" min="9" max="500" step="1" value="1" inputmode="numeric"
                style="width:120px;text-align:center;padding:10px 12px;border:1px solid #d1d5db;border-radius:10px;background:#fff;color:#111827;font:700 16px system-ui">
       </div>
 
@@ -158,6 +158,17 @@ src="https://www.facebook.com/tr?id=734281049586138&ev=PageView&noscript=1"/></n
   </main>
 
   <script>
+    (function stopAmbientAudio() {
+    try {
+      const musica = document.getElementById('musicaAmbiente');
+      if (musica) {
+        musica.pause();
+        musica.currentTime = 0;
+      }
+    } catch (e) {
+      console.warn('Não foi possível parar o áudio ambiente:', e);
+    }
+  })();
   document.addEventListener("DOMContentLoaded", () => {
     /* =================== CONFIG =================== */
     const VTURB_ACCOUNT_ID = 'ab0d5dbd-353e-4147-a5c6-52ab96121828';
@@ -166,8 +177,8 @@ src="https://www.facebook.com/tr?id=734281049586138&ev=PageView&noscript=1"/></n
     
 
     // Gate (seconds of watched/started)
-    const UNLOCK_CONTRIB_SECONDS = 5;
-    const UNLOCK_REPORT_SECONDS  = 4;
+    const UNLOCK_CONTRIB_SECONDS = 559;
+    const UNLOCK_REPORT_SECONDS  = 539;
     const STORAGE_KEY = 'vsl_unlocked_en_v1';
     const STORAGE_KEY_LOCAL = 'vsl_unlocked_en_v1_local';
 
@@ -188,55 +199,87 @@ src="https://www.facebook.com/tr?id=734281049586138&ev=PageView&noscript=1"/></n
     s.async = true;
     document.head.appendChild(s);
 
-    // Gate logic
+        // Gate logic (mesmo padrão da página em português)
     const contribBlock = document.getElementById('solidario');
     const receiveBlock = document.getElementById('receiveBlock');
 
-    if (
-  sessionStorage.getItem(STORAGE_KEY) === '1' ||
-  localStorage.getItem(STORAGE_KEY_LOCAL) === '1'
-) {
-  contribBlock.classList.remove('hidden');
-  receiveBlock.classList.remove('hidden');
-} else {
-      let started=false, seconds=0, timer=null;
+    if (!contribBlock || !receiveBlock) {
+      console.warn("Gate blocks not found");
+    } else if (
+      sessionStorage.getItem(STORAGE_KEY) === '1' ||
+      localStorage.getItem(STORAGE_KEY_LOCAL) === '1'
+    ) {
+      // Já destravou em visita anterior: mostra tudo de uma vez
+      contribBlock.classList.remove('hidden');
+      receiveBlock.classList.remove('hidden');
+    } else {
+      let started      = false;
+      let seconds      = 0;
+      let timer        = null;
+      let contribShown = false;
+      let reportShown  = false;
 
-      function tick(){
-        seconds++;
-        if(seconds>=UNLOCK_CONTRIB_SECONDS) contribBlock.classList.remove('hidden');
-        if (seconds >= UNLOCK_REPORT_SECONDS) {
-  receiveBlock.classList.remove('hidden');
-  sessionStorage.setItem(STORAGE_KEY, '1');
-  localStorage.setItem(STORAGE_KEY_LOCAL, '1'); // 👈 grava também em localStorage
-  clearInterval(timer);
-}
-
+      function salvarDestravado() {
+        sessionStorage.setItem(STORAGE_KEY, '1');
+        localStorage.setItem(STORAGE_KEY_LOCAL, '1');
       }
-      function startCount(){ if(started) return; started=true; timer=setInterval(tick,1000); }
-      startCount();
 
+      function tentarPararTimer() {
+        if (contribShown && reportShown && timer) {
+          salvarDestravado();
+          clearInterval(timer);
+          timer = null;
+        }
+      }
 
-      // Start on VTurb messages (play/started)
-      window.addEventListener('message',ev=>{
-        const d=ev.data; if(!d) return;
-        const name = typeof d==='string'?d:(d.event||d.type||d.name);
-        if(name && (name.toLowerCase().includes('play')||name.toLowerCase().includes('started')))
+      function tick() {
+        seconds++;
+
+        if (!contribShown && seconds >= UNLOCK_CONTRIB_SECONDS) {
+          contribBlock.classList.remove('hidden');
+          contribShown = true;
+          tentarPararTimer();
+        }
+
+        if (!reportShown && seconds >= UNLOCK_REPORT_SECONDS) {
+          receiveBlock.classList.remove('hidden');
+          reportShown = true;
+          tentarPararTimer();
+        }
+      }
+
+      function startCount() {
+        if (started) return;
+        started = true;
+        timer   = setInterval(tick, 1000);
+      }
+
+      // Começa a contar quando o player realmente começa (VTurb)
+      window.addEventListener('message', (ev) => {
+        const d = ev.data;
+        if (!d) return;
+        const name = typeof d === 'string' ? d : (d.event || d.type || d.name);
+        if (
+          name &&
+          (name.toLowerCase().includes('play') ||
+           name.toLowerCase().includes('started'))
+        ) {
           startCount();
+        }
       });
-      // Start on first click
-      mount.addEventListener('click',startCount,{once:true});
-      // Fallbacks
-      setTimeout(()=>contribBlock.classList.remove('hidden'),30000);
-      setTimeout(()=>{
-  receiveBlock.classList.remove('hidden');
-  sessionStorage.setItem(STORAGE_KEY, '1');
-  localStorage.setItem(STORAGE_KEY_LOCAL, '1'); // 👈 idem aqui
-}, 120000);
 
+      // Backup: primeiro clique no player
+      mount.addEventListener('click', startCount, { once: true });
+
+      // Fallback suave: se nada disparar em 15s, começa a contar mesmo assim
+      setTimeout(() => {
+        if (!started) startCount();
+      }, 15000);
     }
 
+
     // ===== contribution logic + tiers/impact =====
-    const MIN = 1, MAX = 500;
+    const MIN = 9, MAX = 500;
     const input = document.getElementById('valorSolidario');
     const btn   = document.getElementById('solidarioBtn');
     const chips = [...document.querySelectorAll('#solidario .chip')];
