troca de pixel + ajustes finais32

--- a/public/en/quiz.html
+++ b/public/en/quiz.html
@@ -4,7 +4,18 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Soul Map — Spiritual Quiz</title>
+   <!-- 🔒 LANGUAGE LOCK: força inglês e bloqueia auto-tradução -->
+  <meta http-equiv="Content-Language" content="en">
+  <meta name="google" content="notranslate">
 
+  <!-- 🔗 CANONICAL + OG para Meta reconhecer que esta URL é EN -->
+  <link rel="canonical" href="https://api.canvaspiritual.com/en/quiz.html">
+  <meta property="og:url" content="https://api.canvaspiritual.com/en/quiz.html">
+  <meta property="og:locale" content="en_US">
+
+  <link rel="stylesheet" href="../styles.css" />
+  <script src="https://www.googletagmanager.com/gtag/js?id=G-PPQK8WC7Z2" async></script>
+  <script src="../script-en.js" defer></script>
   <!-- Microsoft Clarity -->
   <script>
     (function(c,l,a,r,i,t,y){
@@ -34,7 +45,7 @@
   </script>
   <noscript>
     <img height="1" width="1" style="display:none"
-         src="https://www.facebook.com/tr?id=2084584462747238&ev=PageView&noscript=1"/>
+         src="https://www.facebook.com/tr?id=208458446274723&ev=PageView&noscript=1"/>
   </noscript>
 
   <!-- Page event (ViewContent) -->
