--- a/public/en/quiz.html
+++ b/public/en/quiz.html
@@ -92,7 +92,7 @@
 <body class="bg-white text-gray-800 font-sans">
 
   <!-- INTRO -->
-  <section id="intro" class="min-h-screen flex flex-col justify-center items-center px-4 text-center space-y-4">
+  <section id="intro" class="hidden min-h-screen flex flex-col justify-center items-center px-4 text-center space-y-4">
     <h1 class="text-2xl font-semibold text-[#143d59] leading-snug">
       When was the last time you looked at your soul… <span class="italic text-yellow-600">as a whole?</span>
     </h1>
