--- a/public/quiz-mini-lf.html
+++ b/public/quiz-mini-lf.html
@@ -82,7 +82,7 @@ src="https://www.facebook.com/tr?id=734281049586138&ev=PageView&noscript=1"
 <body class="bg-white text-gray-800 font-sans">
 
   <!-- BLOCO: Introdução -->
-  <section id="intro" class="min-h-screen flex flex-col justify-center items-center px-4 text-center space-y-4">
+  <section id="intro" class="hidden min-h-screen flex flex-col justify-center items-center px-4 text-center space-y-4">
     <h1 class="text-2xl font-semibold text-[#143d59] leading-snug">
       Qual foi a última vez que você enxergou a sua alma... <span class="italic text-yellow-600">por completo?</span>
     </h1>
