troca de pixel + ajustes finaifirstquestions3admin2

--- a/admin/admin.html
+++ b/admin/admin.html
@@ -53,6 +53,7 @@
     <th>Session ID</th>
     <th>Nome</th>
     <th>Email</th>
+    <th>WhatsApp</th>
     <th>Tipo</th>
     <th>Status</th>
     <th>Espera</th>
@@ -68,7 +69,7 @@
   </tr>
 </thead>
     <tbody id="corpo-tabela">
-      <tr><td colspan="10"><em>Carregando...</em></td></tr>
+      <tr><td colspan="16"><em>Carregando...</em></td></tr>
     </tbody>
   </table>
 <div id="paginacao" class="paginacao">
